# oclc-stuff

./: .env-example  .gitignore  Dockerfile  Gemfile  README.md  env.example  init.sh  oclc_cross_ref_process.rb  processor.py  pyproject.toml
.github/workflows/: tests.yml
in/: example.txt  input_example2.txt
lib/: alma_bib.rb  any_OCLC_num_in_Alma_035.rb  look_up_mmsid.rb  number_change.rb  update_alma.rb  worldcat_bib.rb  worldcatapiv2.py
oclc_xrefs/: alma_bib.py  worldcat_bib.py  xref.py
programs/: anyoclcnuminalma035.rb  lookup_mmsid.rb  number_change.rb  open_file.rb  same_as_file_oclc_num.rb  update_alma.rb
spec/: alma_bib_spec.rb  main_spec.rb  spec_helper.rb  worldcat_bib_spec.rb
spec/fixtures/: alma_bib.json  input_example.txt  input_non_match.txt  worldcat_output.xml
tests/: test_alma_bib.py  test_sample.py  test_worldcat_bib.py  test_xref.py
tests/fixtures/: alma-bib-with-908-997.json  alma_bib.json  alma_bib_with_908.json  alma_bib_with_908_997.json  worldcat_bib.xml
